--- a/estilos/style.css
+++ b/estilos/style.css
@@ -70,12 +70,35 @@ form > div.campo {
     background-color: #5f2c82;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+    border: 3px solid #5f2c82;
 }
 
 div.campo label {
     display: none;
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+} 
+
+div.campo > input {
+    background-color: #9acecc;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    transform: translateY(-13px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 5px;
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
